# flattie

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile
migrations/: README.md  create-user-tables.sql
src/: README.md  constants.rs  main.rs  shared.rs
src/middleware/: is_authed.rs  mod.rs
src/models/: README.md  user.rs
src/routes/: README.md  app.rs  auth.rs  marketing.rs  mod.rs
src/routes/app/: mod.rs  my_account.rs  ws.rs
static/: README.md  static-file.txt
static/css/: auth.css  flattie.css
static/js/components/: modal.js
templates/: README.md  app.html  index.html  login.html  myaccount.html  signup.html
test/e2e/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
test/e2e/flattie_e2e_tests/: __init__.py  marketing_tests.py
