[package]
name = "flattie"
version = "0.1.0"
authors = ["Gerald Nash <me@aunyks.com>"]
edition = "2021"

[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html#opt-level
opt-level = 3

[dependencies]
# https://github.com/rust-lang/regex
regex = "1.5.5"

# https://github.com/serde-rs/serde
serde = "1.0.136"

# https://github.com/actix/actix-web
actix-web = "3.3.2"

# https://github.com/actix/actix-web
actix-files = "0.5.0"

# https://github.com/rust-lang/log
log = "0.4.14"

# https://github.com/env-logger-rs/env_logger
env_logger = "0.9.0"

# https://github.com/djc/askama
askama = "0.10.5"

# Not using latest because of this: https://github.com/launchbadge/sqlx/issues/1117#issuecomment-801237734, 
# same with actix-rt
# https://github.com/launchbadge/sqlx
sqlx = { version = "0.4.2", features = ["runtime-actix-rustls", "any", "sqlite", "postgres", "mysql" ] }

# Trait: https://github.com/RustCrypto/traits/tree/master/password-hash
# Crate Family: https://github.com/RustCrypto/password-hashes
# Docs: https://docs.rs/argon2/0.3.4/argon2/index.html
argon2 = { version = "0.3.4" }

# https://github.com/rust-random/rand
rand = "0.8.4"

# https://github.com/marshallpierce/rust-base64
base64 = "0.13.0"

# https://github.com/lettre/lettre
lettre = { version = "0.10.0-rc.4", features = ["rustls-tls"] }

[dev-dependencies]
# https://github.com/actix/actix-net
actix-rt = "1.1.1"